# blocker

./: .gitignore  Cargo.toml  README.md
benches/: solver.rs
src/: geometry.rs  grid.rs  lib.rs  main.rs  persistence.rs  pieces.rs  solver.rs  visualization.rs
src/snapshots/: blocker__tests__solutions_snapshot.snap
